Closed
Bug 230342
Opened 22 years ago
Closed 22 years ago
Wrong captions in Printer Error / Print Preview Error dialog
Categories
(Core :: Printing: Output, defect)
Core
Printing: Output
Tracking
()
RESOLVED
FIXED
mozilla1.7alpha
People
(Reporter: isaachh, Assigned: isaachh)
Details
Attachments
(1 file)
|
1.60 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; ko-KR; rv:1.7a) Gecko/20040107
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; ko-KR; rv:1.7a) Gecko/20040107
.
Reproducible: Always
Steps to Reproduce:
1. Make sure you have no printer installed.
2. Try "File | Print Preview" or "File | Print"
3. See the dialog title (caption)
Actual Results:
Print Preview: "Printer Error"
Print: "Print Preview Error"
| Assignee | ||
Comment 1•22 years ago
|
||
patch
Attachment #138577 -
Flags: superreview+
Attachment #138577 -
Flags: review+
Assignee: core.printing → isaachh
Status: UNCONFIRMED → NEW
Ever confirmed: true
Fix checked in to trunk, 2003-01-07 17:24 -0800.
Thanks for the patch.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.7alpha
You need to log in
before you can comment on or make changes to this bug.
Description
•