Fix backwards captions on print error dialogs (printing vs. print preview).  b=230342  Patch from Isaac Hwak Han <isaachh@mailc.net>.  r+sr=dbaron